MNEMOSYNE 0.9.9

(Note that for Windows users we recommend uninstalling the previous 
version before doing an upgrade.)

-fix word wrap when using left alignment (reported by TomC)


MNEMOSYNE 0.9.8.1: 2007-04-23

-fix scheduling bug when importing new grade 0 items (reported by Jim 
Slattery).
-remove incorrect statement with respect to grade 2 behaviour from the 
manual. In 0.9.8, the code was changed to be consistent with the old 
manual. This has been reverted, so that grade 2 behaviour is again more 
like 0.9.7.


MNEMOSYNE 0.9.8: 2007-04-13

-added sound support through tags like <sound src="a.wav">. The path to
 the sound file is either absolute or relative to the location of your 
 .mem file. To play the sound again, press the 'R' key in the main window. 
 Supported file formats are wav, ogg and mp3. On Linux, this requires
 properly installing pygame and its dependencies like SDL.
-add option to increase size of non-latin characters relative to latin
 characters (together with N. Kriha).
-disable 'edit item' as long as the answer is not shown, to prevent 
 accidentally revealing it (patch by D. Herrmann).
-fix handling of < inside latex tags (reported by jgurling, patch by N. 
 Kriha).
-warn when exiting an 'Add items' which contains an item which has not
 been added (requested by Airconditioning).
-fix UTF-8 handling in the Supermemo7 file format (reported by Loco)
-fix corner cases in scheduling algorithm (patch by Querido).
-make button ordering more consistent in add items (reported by N. Kriha).
-fixed handling of multiple latex tags (reported by M. Boespflug).
-don't hang on latex errors (reported by M. Boespflug).
-make tab-separated import resistant to the presence of multiple tabs 
 (reported by J. Forrez).
-fixed hang when end quotes are not present inside a tag.
-fixed regression where the active flag of categories was not respected on
 import (reported by A. Rachmatullah).
-respect left align option in 'preview items' (reported by E. Grannan).