@@ -3,6 +3,8 @@ MNEMOSYNE 0.9.9
 (Note that for Windows users we recommend uninstalling the previous 
 version before doing an upgrade.)
 
+-add maximise button to add and edit items under Windows (thanks to
+ pizzasource and sscharrer)
 -fix word wrap when using left alignment (reported by TomC)
 
 
